27-06-2025 = = Version 1.5.16 =
* Update: woo-login-extend.php new created to make Woocommerce acoount field extend.

18-06-2025 = = Version 1.5.15 =
* Update: Starter content code commented in init.php & in functions.php 
   // $thsm_starter_content = new Th_Shop_Mania_Starter_Content();
   // add_theme_support( 'starter-content', $thsm_starter_content->get() );

* add_action( 'wp_enqueue_scripts', 'th_shop_mania_blocks_library', 1005 ); added to support 
wp-block-library, wp-block-library-theme, wc-block-style ,wc-blocks-style.
* screenshot changed.

16-06-2025 = = Version 1.5.14 =
* Update: update description.

14-06-2025 = = Version 1.5.13 =
* Update: update description.
* Update: rtl issue fixed.

28-05-2025 = = Version 1.5.12 =
* Update: Tested with WooCommerce 9.8.5 and style updated.

16-04-2025  = Version 1.5.11 =
* Update: Tested with WordPress 6.8.

05-04-2025  = Version 1.5.10 =
* Update: WooCommerce issues resolved.
* Update: Decreased the space between variations and the add to cart button.
* Update: Decreased featured image bottom space.
* Update: Mobile view of the "Frequently Bought Together" section on the product single page.
* Update: Decreased space between variation and add to cart.
* Update: Prev Next icons not visible on single page in both PC and mobile.
* Update: Decrease line height of the Bottom footer text in mobile view.
* Update: _load_textdomain_just_in_time was called incorrectly issue resolved.
* Update: Theme tested with lates WordPress 6.8.

03-04-2025  = Version 1.5.9 =
* Update: WooCommerce issues resolved.

01-04-2025  = Version 1.5.8 =
* Update: Seo aria-label updated.

27-03-2025  = Version 1.5.7 =
* New: Changelog.txt added.
* Update Readme.txt updated.

= Version 1.5.6 =
* Update: Seo optimisation of images alt text , links.

= Version 1.5.5 =
* Update: Cart.php updated.

= Version 1.5.4 =
* Update: Archive page sidbar new condition added.

= Version 1.5.3 =
* Update: Admin banner ajax issue resolved.