@@ -1,5 +1,7 @@
 27-06-2025 = = Version 1.5.16 =
 * Update: woo-login-extend.php new created to make Woocommerce acoount field extend.
+* Update: Woo-login extend showing popup after registration added.
+* Update: Cart.php removed & new design added because every time whn woocommerce updates it starts showing update your outdated template.
 
 18-06-2025 = = Version 1.5.15 =
 * Update: Starter content code commented in init.php & in functions.php 
